# ggestor

./: .env  .gitignore  main.py  pyproject.toml
src/assets/design/: application.ui  create-form.ui  sign-in.ui
src/core/: utils.py
src/core/controllers/: controller.py  model_controller.py  view_controller.py
src/core/models/: internal_database_model.py  session_model.py  url_model.py  validator_model.py
src/core/views/: application.py  sign_in.py
src/storage/database/: connection.py  engine.py  session.py
src/storage/database/internal/: storage.db
src/storage/database/models/: __init__.py  user_sessions.py
src/storage/database/queries/: user_sessions.py
