[project]
name = "ggestor"
version = "0.1.0"
description = "Desktop GUI"
authors = [
    {name = "Gonzalo Vivanco Zepeda", email = "class.nonetype@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7.0,<7.0.0",
    "pandas>=2.2.0,<3.0.0",
    "matplotlib>=3.8.0,<4.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
